# Rust_Monorepo

./: .gitignore  Cargo.toml  README.md  output.csv  rust-toolchain.toml
air-brakes-controller-core/: .gitignore  Cargo.toml  build.sh
air-brakes-controller-core/src/: fmt.rs  lib.rs  state_propagation.rs  utils.rs
air-brakes-controller-core/src/baro_state_estimator/: altitude_kf.rs  mod.rs  tests.rs
air-brakes-controller-core/src/controller/: mod.rs  rocket_dynamics.rs
air-brakes-controller-core/src/dead_reckoning/: dead_reckoner.rs  mod.rs  tests.rs  welford.rs
air-brakes-controller-core/src/mekf/: mekf.rs  mod.rs  state_propagation.rs
air-brakes-controller-core/src/mekf/tests/: benchmark.rs  residue.rs
air-brakes-controller-core/src/state_estimator/: mod.rs  welford.rs
air-brakes-controller-core/src/state_estimator/ascent_baro/: mod.rs  tests.rs
air-brakes-controller-core/src/state_estimator/ascent_fusion/: mod.rs
air-brakes-controller-core/src/state_estimator/baro/: altitude_kf.rs  mod.rs  tests.rs
air-brakes-controller-core/src/state_estimator/descent/: mod.rs
air-brakes-controller-core/src/state_estimator2/: mod.rs  state_estimator.rs
air-brakes-controller-core/src/state_estimator2/ascent/: altitude_estimator.rs  altitude_kf.rs  dead_reckoner.rs  mod.rs  orientation_estimator.rs  tests.rs  velocity_estimator.rs  welford.rs
air-brakes-controller-core/src/state_estimator2/descent/: altitude_kf.rs  mod.rs
air-brakes-controller-core/src/tests/: mod.rs  plot.rs
air-brakes-controller-core/test_data/: flight_test.csv  merged.csv  merged_world_frame.csv
air-brakes-controller-matlab-client/: Cargo.toml  README.md
air-brakes-controller-matlab-client/src/: lib.rs
air-brakes-controller-matlab-server/: Cargo.toml
air-brakes-controller-matlab-server/src/: lib.rs  server.rs
air-brakes-controller-wasm/: Cargo.toml  build.sh
air-brakes-controller-wasm/src/: lib.rs
can-bus/: Cargo.toml
can-bus/src/: lib.rs  messages.rs
dspower-servo/: Cargo.toml
dspower-servo/src/: fmt.rs  lib.rs  sliding_mode_controller.rs
firmware-common-cpp/: CMakeLists.txt  README.md
firmware-common-cpp/include/: firmware_common.hpp
firmware-common-cpp/tests/: CMakeLists.txt  test_main.cpp
firmware-common-ffi/: Cargo.toml  build.sh  cbindgen.toml
firmware-common-ffi/pkg/: firmware_common_ffi.d.ts  firmware_common_ffi.js  firmware_common_ffi_bg.wasm  firmware_common_ffi_bg.wasm.d.ts  package.json
firmware-common-ffi/src/: lib.rs
firmware-common-new/: Cargo.toml
firmware-common-new/can_bus_reference_data/: ack.json  airbrakes_control.json  amp_control.json  amp_overwrite.json  amp_reset_output.json  amp_status.json  baro_measurement.json  brightness_measurement.json  data_transfer.json  icarus_status.json  imu_measurement.json  mag_measurement.json  node_status.json  ozys_measurement.json  payload_eps_output_overwrite.json  payload_eps_status.json  reset.json  rocket_state.json  unix_time.json  vl_status.json
firmware-common-new/src/: bootloader.rs  fixed_point.rs  flight_data_record.rs  flight_storage.rs  fmt.rs  gps.rs  heatshrink.rs  lib.rs  readings.rs  sensor_reading.rs  signal_with_ack.rs  time.rs  usb_encoder.rs  utils.rs  variance.rs
firmware-common-new/src/can_bus/: custom_status.rs  id.rs  log_mutiplexer.rs  messages.rs  mod.rs  node_types.rs  receiver.rs  sender.rs  timestamp_residue.rs  usb_can_bus_frame.rs
firmware-common-new/src/can_bus/custom_status/: amp_status.rs  ozys_custom_status.rs  vl_custom_status.rs
firmware-common-new/src/can_bus/messages/: ack.rs  airbrakes_control.rs  amp_control.rs  amp_overwrite.rs  amp_reset_output.rs  amp_status.rs  avionics_status.rs  baro_measurement.rs  brightness_measurement.rs  bulkhead_status.rs  data_transfer.rs  icarus_status.rs  imu_measurement.rs  mag_measurement.rs  node_status.rs  ozys_measurement.rs  payload_activation_status.rs  payload_control.rs  payload_eps_control.rs  payload_eps_output_overwrite.rs  payload_eps_self_test.rs  payload_eps_status.rs  payload_self_test.rs  payload_status.rs  reset.rs  rocket_state.rs  tempurature_measurement.rs  unix_time.rs  vl_status.rs
firmware-common-new/src/can_bus/telemetry/: log_multiplexer.rs  log_mutiplexer.rs  message_aggregator.rs  mod.rs
firmware-common-new/src/rpc/: create_rpc.rs  gimbal_rpc.rs  gs_rpc.rs  half_duplex_serial.rs  lora_rpc.rs  mod.rs
firmware-common-new/src/tests/: mod.rs
firmware-common-new/src/vlp/: client.rs  downlink_client.rs  lora.rs  lora_config.rs  lora_phy.rs  mod.rs  packets.rs  radio.rs  telemetry_packet.rs  usb.rs
firmware-common-new/src/vlp/packets/: ack.rs  altimeter_telemetry.rs  amp_output_overwrite.rs  change_mode.rs  fire_pyro.rs  gps_beacon.rs  landed_telemetry.rs  low_power_telemetry.rs  reset.rs  telemetry.rs  (+5 more)
firmware-ota-updater/: Cargo.toml
firmware-ota-updater/src/: bluetooth.rs  main.rs
rocket-cli/: Cargo.toml  README.md
rocket-cli/src/: args.rs  attach.rs  config.rs  connect_method.rs  connection_method.rs  download_probe.rs  elf_locator.rs  gen_key.rs  gen_ota_key.rs  log_viewer_tui.rs  main.rs  main_demultiplex.rs  target_log.rs  usb_storage.rs
rocket-cli/src/bluetooth/: ble_download.rs  bluetooth_chunk_decoder.rs  demultiplex_log.rs  extract_bin.rs  find_esp.rs  mod.rs  payload_activation_pcb.rs
rocket-cli/src/can_message_viewer/: mod.rs
rocket-cli/src/gs/: config.rs  downlink_packet_display.rs  find_ground_station.rs  headless.rs  mod.rs  rpc_radio.rs  serial_wrapper.rs  vlp_client.rs
rocket-cli/src/log_viewer/: config.rs  log_saver.rs  mod.rs  target_log.rs
rocket-cli/src/monitor/: config.rs  mod.rs  status_bar.rs
rocket-cli/src/probe/: mod.rs  probe_attach.rs  probe_download.rs  select_probe.rs
rocket-cli/src/serial_can/: mod.rs
rocket-cli/src/testing/: decode_bluetooth_chunk.rs  demultiplex_logs.rs  fake_vlp_telemetry.rs  mock_connection_method.rs  mock_ground_station.rs  mod.rs  send_fake_vlp_telemetry.rs
rocket-cli/src/usb/: mod.rs
servo-mpc-controller/: Cargo.toml
servo-mpc-controller/src/: airbrakes_measure.rs  main.rs  serial.rs  servo_debug_tool.rs
(+83 files in other folders)
