[workspace]
members = [
    "firmware-common",
    "vlfs",
    "ferraris-calibration",
    "vl-cli",
    "calculate-required-bits",
    "vl-host-lib",
    "dspower-servo",

    "servo-debug-gui",

    "firmware-common-new",
    # "firmware-common-ffi",
    "air-brakes-controller-core",
    "air-brakes-controller-matlab-server",

    # commmented out because rust-analyzer dont like it on windows,
    # pre-compiled binaries are provided for win64 and linux x64.
    # "air-brakes-controller-matlab-client",
    
    "rocket-cli",
    "defmt-rtt-pipe",
]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[profile.rocket-cli]
inherits = "release"
lto = false
codegen-units = 256
opt-level = 3
