[workspace]
members = [
    "firmware-common",
    "vlfs",
    "ferraris-calibration",
    "vl-cli",
    "calculate-required-bits",
    "vl-host-lib",
    "dspower-servo",

    "servo-debug-gui",

    "firmware-common-new",
    "firmware-common-ffi",
    "air-brakes-controller-core",
    
    "rocket-cli",
    "defmt-rtt-pipe", "air-brakes-controller-wasm",
]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[profile.rocket-cli]
inherits = "release"
lto = false
codegen-units = 256
opt-level = 3
