[workspace]
members = [
    "firmware-common-new",
    "firmware-common-ffi",
    "rocket-cli",

    "calculate-required-bits",
    "defmt-rtt-pipe",

    "dspower-servo",
    "servo-debug-gui",

    "air-brakes-controller-core",
    "air-brakes-controller-wasm",
]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[profile.rocket-cli]
inherits = "release"
lto = false
codegen-units = 256
opt-level = 3
