[package]
name = "air-brakes-controller-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["log", "std"]
log = ["dep:log", "firmware-common-new/log"]
defmt = ["dep:defmt", "heapless/defmt-03", "firmware-common-new/defmt"]
std = []

[dependencies]
defmt = { version = "1.0.1", optional = true }
log = { version = "0.4", optional = true }
heapless = { version = "0.8.0", features = ["serde"], default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
libm = "0.2.7"
nalgebra = { version = "0.34.0", default-features = false, features = ["libm-force"] }
firmware-common-new = { path = "../firmware-common-new", default-features = false}
biquad = "0.5.0"
micromath = "2.1.0"

[dev-dependencies]
approx = "0.5.1"
env_logger = "0.11.8"
nalgebra = "0.34.0"
csv = "1.1"
plotters = "0.3"
icao-isa = "1.0.0"
icao-units = "1.0.0"
