[package]
name = "air-brakes-controller-matlab-client"
version = "0.1.0"
edition = "2024"

[dependencies]
rustmex = { version = "0.6.3", features = ["matlab800"] }
air-brakes-controller-matlab-server = {path = "../air-brakes-controller-matlab-server"}
tarpc = { version = "0.36",  features = ["full"] }
tokio = { version = "1.44.2", features = ["full"] }

[lib]
crate-type = ["cdylib"]
