[package]
name = "can-bus"
version = "0.1.0"
edition = "2021"

[features]

default = []
serde = ["dep:serde", "packed_struct/use_serde"]

[dependencies]
packed_struct = { version = "0.10.1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"], optional = true}
heapless = { version = "0.8.0", features = [
    "defmt-03",
], default-features = false }
