[package]
name = "firmware-common-ffi"
version = "0.9.0"
edition = "2024"

[dependencies]
base64 = { version = "0.22.1", default-features = false }
firmware-common-new = { path = "../firmware-common-new", default-features = false }

[lib]
name = "firmware_common_ffi"
crate-type = ["staticlib", "cdylib"]
