[package]
name = "firmware-common-new"
version = "0.1.0"
edition = "2024"

[features]
default = ["log"]
log = ["dep:log"]
defmt = ["dep:defmt", "heapless/defmt-03", "lora-phy/defmt-03"]

[dependencies]
embedded-io-async = "0.6.1"
embedded-hal-async = "1.0.0"
defmt = { version = "1.0.1", optional = true }
packed_struct = { version = "0.10.1", default-features = false, features = [
    "use_serde",
] }
log = { version = "0.4", optional = true }
nmea = { version = "0.7.0", default-features = false, features = [
    "GGA",
    "GLL",
    "GSA",
    "GSV",
    "RMC",
] }
chrono = { version = "0.4.26", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
heapless = { version = "0.8.0", features = ["serde"], default-features = false }
postcard = { version = "1.1.1" }
embassy-futures = "0.1.1"
crc = "3.2.1"
embassy-sync = "0.6.2"
icao-isa = "1.0.0"
icao-units = "1.0.0"
calculate-required-bits = { path = "../calculate-required-bits" }
libm = "0.2.7"
paste = "1.0"
num-traits = { version = "0.2.19", default-features = false }
lora-phy = { git = "https://github.com/lora-rs/lora-rs.git", default-features = false }
lora-modulation = { git = "https://github.com/lora-rs/lora-rs.git", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
reed-solomon = "0.2.1"

[dev-dependencies]
approx = "0.5.1"
env_logger = "0.11.8"
tokio = { version = "1.44.2", features = ["full"] }
embassy-sync = { version = "0.6.2", features = ["std"] }
